--- a/research.html
+++ b/research.html
@@ -37,136 +37,18 @@
 							</div>
 						</div>
 					</header>
-					<div id="banner">
-						<div class="container">
-							<div class="row">
-								<div class="6u 12u(mobile)">
-
-									<!-- Banner Copy -->
-										<p>WiTech Lab: Laboratory for Emerging Wireless Technologies</p>
-										<!--<a href="#" class="button-big">Learn More</a> -->
-
-								</div>
-								<div class="6u 12u(mobile)">
-
-									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/banner.png" alt="" /></a>
-
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			<!-- Features 
-				<div id="features-wrapper">
-					<div id="features">
-						<div class="container">
-							<div class="row">
-								<div class="3u 12u(mobile)">
-
-									<!-- Feature #1 
-										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-											<h2>Welcome to Halcyonic</h2>
-											<p>
-												This is <strong>Halcyonic</strong>, a free site template
-												by <a href="http://twitter.com/ajlkn">AJ</a> for
-												<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
-												built on HTML5 + CSS3, and includes 5 unique page layouts.
-											</p>
-										</section>
-
-								</div>
-								<div class="3u 12u(mobile)">
-
-									<!-- Feature #2 
-										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
-											<h2>Responsive You Say?</h2>
-											<p>
-												Yes! Halcyonic is built on the <a href="http://getskel.com">Skel</a>
-												framework, so it has full responsive support for desktop, tablet,
-												and mobile device displays.
-											</p>
-										</section>
-
-								</div>
-								<div class="3u 12u(mobile)">
-
-									<!-- Feature #3 
-										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
-											<h2>License Info</h2>
-											<p>
-												Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
-												so use it for personal or commercial use as much as you like (just keep
-												the footer credit intact).
-											</p>
-										</section>
-
-								</div>
-								<div class="3u 12u(mobile)">
-
-									<!-- Feature #4 
-										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-											<h2>Volutpat etiam aliquam</h2>
-											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
-												eu varius nibh. Suspendisse vitae magna eget odio amet mollis.
-											</p>
-										</section>
-
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+                </div>
 
 			<!-- Content -->
 				<div id="content-wrapper">
 					<div id="content">
 						<div class="container">
 							<div class="row">
-								<div class="4u 12u(mobile)">
+								<div class="12u">
 
-									<!-- Box #1 -->
+									<!-- Main Content -->
 										<section>
-											<header>
-												<h2>Technical Vision</h2>
-												<!-- <h3>A subheading about who we are</h3> -->
-											</header>
-											<!-- <a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a> -->
-											<p>
-												The WiTech Lab seeks to develop and apply nascent wireless technologies, both passive and active, to improve daily life.
-											</p>
-										</section>
-
-								</div>
-								<div class="4u 12u(mobile)">
-
-									<!-- Box #2 -->
-										<section>
-											<header>
-												<h2>News</h2>
-												<!--<h3>A subheading about what we do</h3> -->
-											</header>
-											<ul class="check-list">
-												<li>(05/17) Our <a href = "LoRa/ChOIR.html"> project on LoRa scaling in dense environments </a> has been accepted to SigComm '17.</li>
-											</ul>
-										</section>
-
-								</div>
-								<div class="4u 12u(mobile)">
-
-									<!-- Box #3 -->
-										<section>
-											<header>
-												<h2>Contact Information</h2>
-												<!-- <h3>And a final subheading about our clients</h3> -->
-											</header>
-											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed here.
+											The WiTech Lab seeks to develop and apply nascent wireless technologies, both passive and active, to improve daily life. More details coming soon!
 										</section>
 
 								</div>
