Added recent papers and new lab members

--- a/LoRa/presentation.html
+++ b/LoRa/presentation.html
@@ -49,7 +49,7 @@
 								<li class="current"><a href="presentation.html">Presentation</a></li>
 								<li><a href="paper.html">Paper</a></li>
 							</ul>
-						</nav> 
+						</nav>
 
 				</div>
 
@@ -62,7 +62,7 @@
 
 								<article>
 									<header>
-										<h2>Coming soon!</h2>
+										<h2>Slides Available <a href="https://conferences.sigcomm.org/sigcomm/2017/files/program/ts-8-1-choir.pdf">Here</a></h2>
 										<p>The slides, as presented in SigComm 2017.</p>
 								</article>
 
@@ -73,7 +73,7 @@
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container"> <!--
-						<div class="row"> 
+						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
