--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 					</div>
 				</div>
 
-			<!-- Features 
+			<!-- Features
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
 							<div class="row">
 								<div class="3u 12u(mobile)">
 
-									<!-- Feature #1 
+									<!-- Feature #1
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
 											<h2>Welcome to Halcyonic</h2>
@@ -80,7 +80,7 @@
 								</div>
 								<div class="3u 12u(mobile)">
 
-									<!-- Feature #2 
+									<!-- Feature #2
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
 											<h2>Responsive You Say?</h2>
@@ -94,7 +94,7 @@
 								</div>
 								<div class="3u 12u(mobile)">
 
-									<!-- Feature #3 
+									<!-- Feature #3
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
 											<h2>License Info</h2>
@@ -108,7 +108,7 @@
 								</div>
 								<div class="3u 12u(mobile)">
 
-									<!-- Feature #4 
+									<!-- Feature #4
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
 											<h2>Volutpat etiam aliquam</h2>
@@ -153,10 +153,12 @@
 												<!--<h3>A subheading about what we do</h3> -->
 											</header>
 											<ul class="check-list">
-												<li>(05/17) Our <a href = "LoRa/ChOIR.html"> project on LoRa scaling in dense environments </a> has been accepted to SigComm '17.</li>
+												<li>(01/18) Our project on Low-Power Wide-Area Networking (Charm) was accepted at IPSN 2018. </li>
+												<li>(01/18) Our project on Deep Learning for IoT Authentciation was accepted at ICC 2018. </li>
+												<li>(10/17) Our project on wearable battery-free body-frame tracking was accepted at IMWUT 2017 (Ubicomp). </li>
+												<li>(05/17) Our <a href = "LoRa/ChOIR.html"> project on LoRa scaling in dense environments has been accepted to SigComm '17.</li> </a>
 											</ul>
 										</section>
-
 								</div>
 								<div class="4u 12u(mobile)">
 
@@ -166,7 +168,7 @@
 												<h2>Contact Information</h2>
 												<!-- <h3>And a final subheading about our clients</h3> -->
 											</header>
-											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed here.
+											Our lab is located on the 4th floor of the Collaborative Innovation Center on the CMU campus. Professor Swarun Kumar, the PI, has his contact information listed <a href = "https://www.andrew.cmu.edu/user/swarunk/index.html"> here</a>.
 										</section>
 
 								</div>
@@ -181,7 +183,7 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links 
+								<!-- Links
 									<section>
 										<h2>Links to Important Stuff</h2>
 										<div>
@@ -225,7 +227,7 @@
 							</div>
 							<div class="4u 12u(mobile)">
 
-								<!-- Blurb 
+								<!-- Blurb
 									<section>
 										<h2>An Informative Text Blurb</h2>
 										<p>
