--- a/people.html
+++ b/people.html
@@ -51,9 +51,9 @@
 												<h2>Faculty</h2>
 											</header>
 											<p>
-												<center><a href="https://www.andrew.cmu.edu/user/swarunk/"> <img src="images/swarun_cmu_pic.png" 
-                                                   alt="" style="width:140px;height:200px;"/></a>
-                                            <div>Swarun Kumar</div></center>
+												<center><a href="https://www.andrew.cmu.edu/user/swarunk/"> <figure><img src="images/swarun_cmu_pic.png"
+                                                   alt="" style="width:140px;height:200px;"/>
+																								 <figcaption> Swarun Kumar </figcaption></figure></a>
 											</p>
 										</section>
 										<section>
@@ -61,47 +61,53 @@
 												<h2>Graduate Students</h2>
 											<p>
 												<center>
-												<a href="https://www.andrew.cmu.edu/user/reletreb/index.html"> <img src="images/Rashad.jpg" 
-                                                   alt="" style="width:135px;height:200px;border: #FFFFFF 4px solid"/></a>
-                                                &nbsp&nbsp&nbsp&nbsp&nbsp
-                                                <a href="http://shift-3.com/"> <img src="images/Haojian.jpg" 
-                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/></a>
-                                                &nbsp&nbsp&nbsp&nbsp&nbsp
-                                                <a href="http://www.dianazhang.net/"> <img src="images/Diana.png" 
-                                                   alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/></a>
-
-                                                    <div>Rashad Eletreby        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  Haojian Jin 
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
-Diana Zhang&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div>
-                                                    <div>Advisor: Osman Yagan &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
-                                                Advisor: Jason Hong 
-                                                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                                                Advisor: Swarun Kumar </div>
+                                                <a href="http://www.dianazhang.net/">
+																									<figure>
+																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
+																								 <figcaption> Diana Zhang </figcaption> </figure>
+																								 </a>
+																								 <a href="https://akshaygadre.github.io/">
+ 																									<figure>
+ 																										<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+ 																								 <figcaption> Akshay Gadre </figcaption> </figure>
+																								 </a>
+																								 <a href=" https://jingxianwang.github.io/">
+ 																									<figure>
+ 																										<img src="images/Jingxian.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+ 																								 <figcaption> Jingxian Wang </figcaption> </figure>
+																								 </a>
+																							 </center>
+											</p>
+											<p>
 											</p>
 										</section>
-                                        <section>
+										<section>
+											<header>
+												<h2>Graduate Collaborators</h2>
+											<p>
+												<center>
+												<a href="https://www.andrew.cmu.edu/user/reletreb/index.html"> <figure>
+																									<img src="images/Rashad.jpg"
+                                                   alt="" style="width:135px;height:200px;border: #FFFFFF 4px solid"/>
+																									 <figcaption>Rashad Eletreby</a><br>Advisor: Osman Yagan</figcaption> </figure>
+                                                <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Haojian Jin</a><br>Advisor: Jason Hong</figcaption> </figure>
+											 </center>
+											</p>
+											<p>
+											</p>
+										</section>
+                    <section>
 											<header>
 												<h2>Undergraduate Students</h2>
 											</header>
 											<p>
 												<center>
-												<a href="#"> <img src="images/Jun.jpeg" 
-                                                   alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/></a>
-                                                &nbsp&nbsp&nbsp&nbsp&nbsp
-                                                <a href="#"> <img src="images/blank.png" 
-                                                   alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/></a>
-                                                &nbsp&nbsp&nbsp&nbsp&nbsp
-                                                <a href="#"> <img src="images/blank.png" 
-                                                   alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/></a>
-
-                                            <div> Junsu Jang                                                                      
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-Isha Iyer
-&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-&nbsp&nbsp&nbsp&nbsp&nbspNamrita Murali</div> 
+												<a href="www.linkedin.com/in/junsujang"> <figure><img src="images/Jun.jpeg"
+                                                   alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
+																								 <figcaption> Junsu Jang </figcaption></figure></a>
                                         </center>
-
 											</p>
 										</section>
                                         <section>
@@ -111,9 +117,9 @@ Isha Iyer
 											<p>
                                                 Summer 2017 Interns:
 												<center>
-                                                <a href="#"> <img src="images/Summer2017Interns.jpg" 
+                                                <a href="#"> <img src="images/Summer2017Interns.jpg"
                                                    alt="" style="width:400px;height:400px;border: #FFFFFF 4px solid"/></a>
-                                                <div><a href = "http://www.yangzhijian.me">Zhijian Yang</a>, <a href="http://www.nan-zhou.com">Nan Zhou</a>, Junsu Jang, and Atul Bansal</div>
+                                                <div><a href = "http://www.yangzhijian.me">Zhijian Yang</a>, <a href="http://www.nan-zhou.com">Nan Zhou</a>, <a href="www.linkedin.com/in/junsujang">Junsu Jang</a>, and Atul Bansal</div>
                                                 </center>
 											</p>
                                             <p>
@@ -136,7 +142,7 @@ Isha Iyer
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links 
+								<!-- Links
 									<section>
 										<h2>Links to Important Stuff</h2>
 										<div>
@@ -180,7 +186,7 @@ Isha Iyer
 							</div>
 							<div class="4u 12u(mobile)">
 
-								<!-- Blurb 
+								<!-- Blurb
 									<section>
 										<h2>An Informative Text Blurb</h2>
 										<p>
