--- a/publications.html
+++ b/publications.html
@@ -49,9 +49,13 @@
 									<!-- Main Content -->
 										<section>
 											<p>
-												<em>Empowering Low-Power Wide Area Networks in Urban Settings</em>
+												<strong> A Deep Learning Approach to IoT Authentication: </strong> Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC 2018 <em>(to appear)</em>
+												<br>
+												<strong> Towards Wearable Everyday Body-Frame Tracking: </strong> Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, IMWUT 2017 (UbiComp 2018) <em>(to appear)</em>
+												<br>
+												<strong>Empowering Low-Power Wide Area Networks in Urban Settings: </strong>
                                                 Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM 2017,
-                                                Los Angeles, California <i>(To Appear)</i>
+                                                Los Angeles, California
 											</p>
 										</section>
 
@@ -67,7 +71,7 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links 
+								<!-- Links
 									<section>
 										<h2>Links to Important Stuff</h2>
 										<div>
@@ -111,7 +115,7 @@
 							</div>
 							<div class="4u 12u(mobile)">
 
-								<!-- Blurb 
+								<!-- Blurb
 									<section>
 										<h2>An Informative Text Blurb</h2>
 										<p>
