--- a/LoRa/paper.html
+++ b/LoRa/paper.html
@@ -49,7 +49,7 @@
 								<li><a href="presentation.html">Presentation</a></li>
 								<li class="current"><a href="paper.html">Paper</a></li>
 							</ul>
-						</nav> 
+						</nav>
 
 				</div>
 
@@ -62,7 +62,7 @@
 
 								<article>
 									<header>
-										<h2>Coming soon!</h2>
+										<h2>Paper Available <a href="https://dl.acm.org/citation.cfm?id=3098845"> Here </a></h2>
 										<p>The paper, as published in SigComm 2017.</p>
 								</article>
 
@@ -73,7 +73,7 @@
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container"> <!--
-						<div class="row"> 
+						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
