Removed Broken Link

--- a/LoRa/ChOIR.html
+++ b/LoRa/ChOIR.html
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h2><a href="index.html" id="logo">ChOIR: <em>Empowering Low-Power Wide Area Networks in Urban Settings</em></a></h2>
+						<h2>ChOIR: <em>Empowering Low-Power Wide Area Networks in Urban Settings</em></h2>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -49,7 +49,7 @@
 								<li><a href="presentation.html">Presentation</a></li>
 								<li><a href="paper.html">Paper</a></li>
 							</ul>
-						</nav> 
+						</nav>
 
 				</div>
 
@@ -91,7 +91,7 @@
 					</div>
 				</section>
 
-			<!-- Gigantic Heading 
+			<!-- Gigantic Heading
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
@@ -101,7 +101,7 @@
 					</div>
 				</section> -->
 
-			<!-- Posts 
+			<!-- Posts
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row">
@@ -147,7 +147,7 @@
 					</div>
 				</section> -->
 
-			<!-- CTA 
+			<!-- CTA
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
@@ -160,7 +160,7 @@
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container"> <!--
-						<div class="row"> 
+						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
