Fixed a few small typos

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 											</header>
 											<ul class="check-list">
 												<li>(01/18) Our project on Low-Power Wide-Area Networking (Charm) was accepted at IPSN 2018. </li>
-												<li>(01/18) Our project on Deep Learning for IoT Authentciation was accepted at ICC 2018. </li>
-												<li>(10/17) Our project on wearable battery-free body-frame tracking was accepted at IMWUT 2017 (Ubicomp). </li>
+												<li>(01/18) Our project on Deep Learning for IoT Authentication was accepted at ICC 2018. </li>
+												<li>(09/17) Our project on wearable battery-free body-frame tracking was accepted at IMWUT 2017 (Ubicomp). </li>
 												<li>(05/17) Our <a href = "LoRa/ChOIR.html"> project on LoRa scaling in dense environments has been accepted to SigComm '17.</li> </a>
 											</ul>
 										</section>
