--- a/people.html
+++ b/people.html
@@ -89,10 +89,14 @@
 												<a href="https://www.andrew.cmu.edu/user/reletreb/index.html"> <figure>
 																									<img src="images/Rashad.jpg"
                                                    alt="" style="width:135px;height:200px;border: #FFFFFF 4px solid"/>
-																									 <figcaption>Rashad Eletreby</a><br>Advisor: Osman Yagan</figcaption> </figure>
+																									 <figcaption>Rashad Eletreby</a><br>Advisor: Osman Yagan, CMU</figcaption> </figure>
                                                 <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Haojian Jin</a><br>Advisor: Jason Hong</figcaption> </figure>
+																								    <figcaption>Haojian Jin</a><br>Advisor: Jason Hong, CMU</figcaption> </figure>
+
+                                                <a href="https://tinyurl.com/revathynarayanan"> <figure> <img src="images/Revathy.jpg"
+                                                   alt="" style="width:200px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Revathy Narayanan</a><br>Advisor: C. Siva Ram Murthy, IIT Madras</figcaption> </figure>
 											 </center>
 											</p>
 											<p>
