--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 												<!--<h3>A subheading about what we do</h3> -->
 											</header>
 											<ul class="check-list">
+												<li>(11/18) <a href = "GalioT.html"> GalioT </a> being presented at Hotnets '18. </li>
 												<li>(07/18) Check our <a href = "fabrics/fabrics.html"> smart fabrics </a>projects! </li>
 												<li>(01/18) Our project on Low-Power Wide-Area Networking (Charm) was accepted at IPSN 2018. </li>
 												<li>(01/18) Our project on Deep Learning for IoT Authentication was accepted at ICC 2018. </li>
