--- a/publications.html
+++ b/publications.html
@@ -49,9 +49,9 @@
 									<!-- Main Content -->
 										<section>
 											<p>
-												<strong> A Deep Learning Approach to IoT Authentication: </strong> Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC 2018 <em>(to appear)</em>
+												<strong> A Deep Learning Approach to IoT Authentication: </strong> Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC 2018
 												<br>
-												<strong> Towards Wearable Everyday Body-Frame Tracking: </strong> Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, IMWUT 2017 (UbiComp 2018) <em>(to appear)</em>
+												<strong> Towards Wearable Everyday Body-Frame Tracking: </strong> Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, IMWUT 2017 (UbiComp 2018)
 												<br>
 												<strong>Empowering Low-Power Wide Area Networks in Urban Settings: </strong>
                                                 Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM 2017,
