Swarun: New content

--- a/publications.html
+++ b/publications.html
@@ -49,13 +49,57 @@
 									<!-- Main Content -->
 										<section>
 											<p>
-												<strong> A Deep Learning Approach to IoT Authentication: </strong> Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC 2018
-												<br>
-												<strong> Towards Wearable Everyday Body-Frame Tracking: </strong> Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, IMWUT 2017 (UbiComp 2018)
-												<br>
-												<strong>Empowering Low-Power Wide Area Networks in Urban Settings: </strong>
-                                                Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM 2017,
-                                                Los Angeles, California
+
+
+<strong><h4 style="margin-left:30px">CONFERENCES</h4></strong>
+<div style="margin-left:30px">
+Our research interests are in the area of computer networks with a special focus on wireless networks and mobile systems. <br />
+</div>
+
+<div style="margin-left:60px">
+<ul style="list-style-type: disc">
+<li><strong>Frequency Configuration for Low-Power Wide-Area Networks in a Heartbeat</strong>,  Akshay Gadre, Revathy Narayanan, Anh Luong, Swarun Kumar, Anthony Rowe and Bob Iannucci, NSDI 2020<br /></li>
+<li><strong>RFID Tattoo: A Wireless Platform for Speech Recognition </strong>, Jingxian Wang, Chengfeng Pan, Haojian Jin, Vaibhav Singh, Yash Jain, Jason Hong, Carmel Majidi and Swarun Kumar, UbiComp  2020 [<a href="papers/rftattoo-ubicomp2020.pdf">PAPER</a>] [<a href="rftattoo.html">WEBSITE</a>]<br /></li>
+<li><strong>Silver-Coated PDMS Beads for Soft, Stretchable, and Thermally Stable Conductive Elastomer Composites </strong>,  Chengfeng Pan, Yun Sik Ohm, Jingxian Wang, Michael J. Ford, Kitty Kumar, Swarun Kumar, and Carmel Majidi, ACS applied materials and interfaces  2019<br /></li>
+<li><strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>] [<a href="sozu.html">WEBSITE</a>]<br /></li>
+<li><strong>Perspective: eliminating channel feedback in next generation cellular networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, ACM SIGCOMM CCR  2019<br /></li>
+<li><strong>Software Defined Cooking using a Microwave Oven </strong>, Haojian Jin, Jingxian Wang, Swarun Kumar and Jason Hong, MobiCom  2019 <em>(ACM GetMobile Research Hightlight)</em> [<a href="papers/sdc-mobicom2019.pdf">PAPER</a>] [<a href="slides/sdc-mobicom2019.pdf">SLIDES</a>] [<a href="sdc.html">WEBSITE</a>]<br /></li>
+<li><strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>] [<a href="pushid.html">WEBSITE</a>]<br /></li>
+<li><strong>Revisiting Software Defined Radios in the IoT Era </strong>, Revathy Narayanan, Swarun Kumar, HotNets  2018<br /></li>
+<li><strong>Poster: Maintaining UAV Stability using Low-Power WANs </strong>, Akshay Gadre, Revathy Narayanan, Swarun Kumar, MobiCom - Posters  2018<br /></li>
+<li><strong>WiSh: Towards a Wireless Shape-aware World </strong>, Haojian Jin, Jingxian Wang, Zhijian Yang, Swarun Kumar, Jason Hong, MobiSys  2018 [<a href="papers/wish-mobisys2018.pdf">PAPER</a>] [<a href="wish.html">WEBSITE</a>]<br /></li>
+<li><strong>Charm: Exploiting Geographical Diversity Through Coherent Combining in Low-Power Wide-Area Networks </strong>, Adwait Dongare, Revathy Narayanan, Akshay Gadre, Artur Balanuta, Anh Luong, Swarun Kumar, Bob Iannucci, Anthony Rowe, IPSN  2018 <em>(Best Paper Award)</em> [<a href="papers/charm-ipsn2018.pdf">PAPER</a>]<br /></li>
+<li><strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018<br /></li>
+<li><strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>] [<a href="rfwear.html">WEBSITE</a>]<br /></li>
+<li><strong>Empowering Low-Power Wide Area Networks in Urban Settings </strong>, Rashad Eletreby, Diana Zhang, Swarun Kumar, and Osman Yagan, SIGCOMM  2017 [<a href="papers/choir-sigcomm2017.pdf">PAPER</a>] [<a href="slides/choir-sigcomm2017.pdf">SLIDES</a>] [<a href="choir.html">WEBSITE</a>]<br /></li>
+<li><strong>Eliminating Channel Feedback in Next-Generation Cellular Networks </strong>, Deepak Vasisht, Swarun Kumar, Hariharan Rahul and Dina Katabi, SIGCOMM  2016 <em>(Best Paper Award, GetMobile Research Highlight)</em><br /></li>
+<li><strong>Decimeter-Level Localization with a Single WiFi </strong>, Access Point, Deepak Vasisht, Swarun Kumar and Dina Katabi, NSDI  2016<br /></li>
+<li><strong>piStream: Physical Layer Informed Adaptive Video Streaming Over LTE</strong>, Xiufeng Xie, Xinyu Zhang, Swarun Kumar, and Li Erran Li, MobiCom  2015 <em>(ACM GetMobile Research Hightlight)</em><br /></li>
+<li><strong>Guaranteeing Spoof-Resilient Multi-Robot Networks</strong>, Stephanie Gil (Co-primary), Swarun Kumar (Co-primary), Mark Mazumder, Dina Katabi and Daniela Rus, RSS  2015<br /></li>
+<li><strong>Accurate Indoor Localization with Zero Startup Cost</strong>, Swarun Kumar, Stephanie Gil, Dina Katabi and Daniela Rus, ACM MOBICOM  2014 <em>(Best Presentation Runner-up)</em> [<a href="papers/ubicarse-mobicom2014.pdf">PAPER</a>] [<a href="ubicarse.html">WEBSITE</a>]<br /></li>
+<li><strong>LTE Radio Analytics Made Easy and Accessible</strong>, Ezzeldin Hamed, Dina Katabi, and Li Erran Li, ACM SIGCOMM  2014 [<a href="papers/lteye-sigcomm2014.pdf">PAPER</a>] [<a href="lteye.html">WEBSITE</a>]<br /></li>
+<li><strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus, International Symposium on Robotics Research (ISRR)  2013 [<a href="wiseek.html">WEBSITE</a>]<br /></li>
+<li><strong>Bringing Cross-Layer MIMO to Today's Wireless LANs</strong>, Swarun Kumar, Diego Cifuentes, Shyamnath Gollakota, and Dina Katabi, ACM SIGCOMM  2013 [<a href="papers/openrf-sigcomm2013.pdf">PAPER</a>] [<a href="slides/openrf-sigcomm2013.pptx">SLIDES</a>] [<a href="openrf.html">WEBSITE</a>]<br /></li>
+<li><strong>Interference Alignment by Motion</strong>, Fadel Adib (Co-primary), Swarun Kumar (Co-primary), Omid Aryan, Shyamnath Gollakota, and Dina Katabi, ACM MOBICOM  2013 [<a href="papers/momimo-mobicom2013.pdf">PAPER</a>] [<a href="slides/momimo-mobicom2013.pptx">SLIDES</a>] [<a href="momimo.html">WEBSITE</a>]<br /></li>
+<li><strong>CarSpeak: A Content-Centric Network for Autonomous Driving</strong>, Swarun Kumar, Lixin Shi, Stephanie Gil, Nabeel Ahmed, Dina Katabi, and Daniela Rus, ACM SIGCOMM  2012 [<a href="papers/carspeak-sigcomm2012.pdf">PAPER</a>] [<a href="slides/carspeak-sigcomm2012.pptx">SLIDES</a>] [<a href="carspeak.html">WEBSITE</a>]<br /></li>
+<li><strong>MegaMIMO: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi, ACM SIGCOMM  2012 <em>(CACM Research Highlight)</em> [<a href="papers/megamimo-sigcomm2012.pdf">PAPER</a>] [<a href="megamimo.html">WEBSITE</a>]<br /></li>
+<li><strong>A Cloud-Assisted Design for Autonomous Driving</strong>, Swarun Kumar, Shyamnath Gollakota, Dina Katabi, MCC Workshop (SIGCOMM)  2012<br /></li>
+<li><strong>On the Feasibility of Wi-Fi Based Material Sensing </strong>, Diana Zhang, Jingxian Wang, Junsu Jang, Junbo Zhang, Swarun Kumar, MobiCom  2019 [<a href="papers/intuwition-mobicom2019.pdf">PAPER</a>] [<a href="slides/intuwition-mobicom2019.pdf">SLIDES</a>] [<a href="intuwition.html">WEBSITE</a>]<br /></li>
+</ul>
+</div>
+
+
+<strong><h4 style="margin-left:30px;margin-top:30px">JOURNAL PAPERS</h4></strong>
+
+<div style="margin-left:60px">
+<ul style="list-style-type: disc">
+<li><strong>Adaptive Communication in Multi-Robot Systems Using Directionality of Signal Strength</strong>, Stephanie Gil, Swarun Kumar, Dina Katabi and Daniela Rus,  2015 <br /></li>
+<li><strong>JMB: Scaling Wireless Capacity with User Demands</strong>, Hariharan Rahul, Swarun Kumar, and Dina Katabi,  2014 <br /></li>
+</ul>
+</div>
+
+
+
 											</p>
 										</section>
 
