--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
 							</div>
 						</div>
 					</header>
-                </div>
+				</div>
 
 			<!-- Content -->
 				<div id="content-wrapper">
@@ -48,7 +48,130 @@
 
 									<!-- Main Content -->
 										<section>
-											The WiTech Lab seeks to develop and apply nascent wireless technologies, both passive and active, to improve daily life. More details coming soon!
+											<p>
+
+
+
+<strong><h4>RESEARCH PROJECTS</h4></strong><br />
+<div>
+The WiTech lab's research is in the area of computer networks with a
+special focus on wireless networks and mobile systems. Recent years
+have witnessed an explosive growth in wireless connectivity, enabling
+a host of new applications and services.  Our research designs and
+builds new wireless technologies that provide faster connectivity to
+our existing devices, connect previously unconnected objects to the
+Internet and provide novel services as a result. Our research has made
+three broad contributions: <br />
+</div><br />
+
+<strong><h4 style="font-size:17px">Connecting the Internet of Things</h4></strong>
+<div> Imagine if every object that surrounds you is wirelessly
+connected. Our research explores: what would such a network look like?
+Specifically, we need systems that scale to a large number of
+connected devices, are self-configurable and secure. Most importantly,
+their battery needs to last for years, or perhaps they must operate
+with no battery at all. Our research explores both these
+alternatives: </div>
+
+<center>
+<table>
+<tr>
+<td>
+<center>
+<strong><a href="lpwan.html" style="text-decoration:none">Low-Power Wide-Area Networks</a></strong> <br /></center>
+<div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
+<a href="lpwan.html" style="text-decoration:none"><img src="images/lpwan.png" style="width:320px;height:190px"/></a>
+</div>
+</td>
+<td style="width:10px">
+</td>
+<td>
+<center>
+<strong><a href="bfree.html" style="text-decoration:none">Battery-Free Internet of Things</a></strong> <br /> </center>
+<div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
+<a href="bfree.html" style="text-decoration:none"><img src="images/bfree.png" style="width:320px;height:190px"/></a>
+</div>
+</td>
+</tr>
+</table>
+</center>
+
+<br />
+
+<strong><h4 style="font-size:17px">Next-Generation Wireless Connectivity</h4></strong>
+<div> What would be the wireless technologies that connects
+smartphones and wireless devices of the future to Internet to be
+ten-fold faster than possible today? How would such a system scale
+with many wireless devices sharing the same spectrum?  Our research
+explores next-generation wireless technologies to mitigate
+interference in wireless LANs and better configure cellular networks
+of today, as well as emerging technologies of the future such as
+mm-wave. Our work spans both Wi-Fi and cellular networks beyond 5-G. </div>
+
+<center>
+<table>
+<tr>
+<td>
+<center>
+<strong><a href="wifi.html" style="text-decoration:none">Future Wi-Fi and Freedom from Interference</a></strong> <br /></center>
+<div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
+<a href="wifi.html" style="text-decoration:none"><img src="images/wifi.png" style="width:320px;height:190px"/></a>
+</div>
+</td>
+<td style="width:10px">
+</td>
+<td>
+<center>
+<strong><a href="xg.html" style="text-decoration:none">mm-Wave and Beyond 5-G</a></strong> <br /> </center>
+<div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
+<a href="xg.html" style="text-decoration:none"><img src="images/xg.png" style="width:320px;height:190px"/></a>
+</div>
+</td>
+</tr>
+</table>
+</center>
+
+<br />
+
+<strong><h4 style="font-size:17px">Novel Wireless Services</h4></strong>
+<div>Our research explores novel services that are enabled by
+next-generation wireless speeds and connectivity to objects around
+us. Specifically, we study if wireless communication radios can be
+re-used as a sensing mechanism. For instance, can wireless radios help
+us track our location, even if we are indoors, where GPS fails? Can
+wireless signals help us track our own body and sense the environment
+around us? Our research also studies the security and privacy
+implications of such future wireless networks and services.
+ </div>
+
+<center>
+<table>
+<tr>
+<td>
+<center>
+<strong><a href="sensing.html" style="text-decoration:none">Wireless Localization and Sensing</a></strong> <br /></center>
+<div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
+<a href="sensing.html" style="text-decoration:none"><img src="images/sensing.png" style="width:320px;height:190px"/></a>
+</div>
+</td>
+<td style="width:10px">
+</td>
+<td>
+<center>
+<strong><a href="security.html" style="text-decoration:none">Wireless Security and Privacy</a></strong> <br /> </center>
+<div style="margin-top:10px;padding:10px;border-width:2px;border-style:solid">
+<a href="security.html" style="text-decoration:none"><img src="images/security.png" style="width:320px;height:190px"/></a>
+</div>
+</td>
+</tr>
+</table>
+</center>
+
+
+<br /><br />
+</div>
+
+											</p>
 										</section>
 
 								</div>
@@ -63,7 +186,7 @@
 						<div class="row">
 							<div class="8u 12u(mobile)">
 
-								<!-- Links 
+								<!-- Links
 									<section>
 										<h2>Links to Important Stuff</h2>
 										<div>
@@ -107,7 +230,7 @@
 							</div>
 							<div class="4u 12u(mobile)">
 
-								<!-- Blurb 
+								<!-- Blurb
 									<section>
 										<h2>An Informative Text Blurb</h2>
 										<p>
