--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
 												<!--<h3>A subheading about what we do</h3> -->
 											</header>
 											<ul class="check-list">
+<li> (11/19) Check out Swarun's talk on future wireless at <a href="https://www.youtube.com/watch?v=xhCCFOPDpZs">TEDxPittsburgh</a> </li>
+<li> (11/19) RFTattoo is accepted at UBICOMP 2020 </li>
+<li> (10/19) Our work on low-power WANs was accepted at NSDI 2020 </li>
+<li> (10/19) Check out our smart materials paper at ACS Applied Materials & Interfaces </li>
+<li> (09/19) Sozu is accepted at UIST 2019 </li>
+<li> (08/19) Check out our papers on software-defined cooking and material sensing at MobiCom 2019</li>
+
 												<li>(02/19) <a href = "pushid.html"> PushID </a> presented at NSDI '19. </li>
 												<li>(11/18) <a href = "GalioT.html"> GalioT </a> being presented at Hotnets '18. </li>
 												<li>(07/18) Check our <a href = "fabrics/fabrics.html"> smart fabrics </a>projects! </li>
