--- a/people.html
+++ b/people.html
@@ -66,15 +66,40 @@
 																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
 																								 <figcaption> Diana Zhang </figcaption> </figure>
 																								 </a>
-																								 <a href="https://akshaygadre.github.io/">
- 																									<figure>
- 																										<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+
+ 																								
+     <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Haojian Jin</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Jason Hong</div></figcaption> </figure>
+ 		
+
+																								 <a href="https://akshaygadre.github.io/"> 	<figure>																								<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
  																								 <figcaption> Akshay Gadre </figcaption> </figure>
 																								 </a>
 																								 <a href=" https://jingxianwang.github.io/">
  																									<figure>
  																										<img src="images/Jingxian.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
  																								 <figcaption> Jingxian Wang </figcaption> </figure>
+
+     <a href="https://vaibhavsingh96.github.io/"> <figure> <img src="images/Vaibhav.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Vaibhav Singh</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Osman Ya&gbreve;an</div></figcaption> </figure>
+
+
+     <a href="http://www.andrew.cmu.edu/user/aprabhak/"> <figure> <img src="images/Akarsh.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Akarsh Prabhakara</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Anthony Rowe</div></figcaption> </figure>
+
+
+     <a href="http://www.andrew.cmu.edu/user/junboz2/"> <figure> <img src="images/Junbo.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Junbo Zhang</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Soummya Kar</div></figcaption> </figure>
+
+
+     <a href="https://atul-bansal.github.io/"> <figure> <img src="images/Atul.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Atul Bansal</a><br><div style="margin-top:-10px; margin-bottom:10px">Co-advised by Prof. Atul Bansal</div></figcaption> </figure>
+
 																								 </a>
 																							 </center>
 											</p>
@@ -90,9 +115,7 @@
 																									<img src="images/Rashad.jpg"
                                                    alt="" style="width:135px;height:200px;border: #FFFFFF 4px solid"/>
 																									 <figcaption>Rashad Eletreby</a><br>Advisor: Osman Yagan, CMU</figcaption> </figure>
-                                                <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
-                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Haojian Jin</a><br>Advisor: Jason Hong, CMU</figcaption> </figure>
+                                           
 
                                                 <a href="https://tinyurl.com/revathynarayanan"> <figure> <img src="images/Revathy.jpg"
                                                    alt="" style="width:200px;height:200px;border: #FFFFFF 4px solid"/>
