--- a/pushid.html
+++ b/pushid.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title> GalioT </title>
+		<title> WiTech Lab </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -37,7 +37,7 @@
 							</div>
 						</div>
 					</header>
-                </div>
+				</div>
 
 			<!-- Content -->
 				<div id="content-wrapper">
@@ -48,9 +48,28 @@
 
 									<!-- Main Content -->
 										<section>
-<p>Today’s commercial passive RFIDs report ranges of 5-15 meters at best. This reveals blind spots for RFIDs to be detected in warehouses, stores (Amazon Go) and factories today. We achieve a 7.4x improvement in range over state-of-the-art commercial RFID systems without modifying the RFID tags.</p>
+											<p>
 
-                                        <embed src="assets/nsdi19-wang-jingxian.pdf" type="application/pdf" width="100%" height="600px" />
+
+<strong><h4>Project PushID: Pushing the Range Limits of Commercial Passive RFIDs </h4></strong><br />
+<table>
+<tr>
+<td>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/pushid.png" style="width:300px"/>
+</div>
+</td>
+<td style="width:10px">
+</td>
+<td style="vertical-align:middle">
+Today's commercial passive RFIDs report ranges of 5-10 meters at best. This reveals blindspots where RFIDs remain undetected in warehouses, stores and factories today. We present PushID which achieves an 8x improvement in range over commercial RFID systems.
+</td>
+</tr>
+</table><br /> <strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>]<br />
+</li>
+</ul></div>											</p>
 										</section>
 
 								</div>
@@ -142,3 +161,4 @@
 
 	</body>
 </html>
+
