--- a/bfree.html
+++ b/bfree.html
@@ -77,7 +77,7 @@ This project aims to ask: Can we connect to battery-free devices over extremely 
 <li><strong>Sozu: Self-Powered Radio Tags for Building-Scale Activity Sensing </strong>, Yang Zhang, Yasha Iravantchi, Haojian Jin, Swarun Kumar, and Chris Harrison, UIST  2019 [<a href="papers/sozu-uist2019.pdf">PAPER</a>] [<a href="sozu.html">WEBSITE</a>]<br /></li>
 <li><strong>Pushing the Range Limits of Commercial Passive RFIDs </strong>, Jingxian Wang, Junbo Zhang, Rajarshi Saha, Haojian Jin, Swarun Kumar, NSDI  2019 [<a href="papers/pushid-nsdi2019.pdf">PAPER</a>] [<a href="pushid.html">WEBSITE</a>]<br /></li>
 <li><strong>WiSh: Towards a Wireless Shape-aware World </strong>, Haojian Jin, Jingxian Wang, Zhijian Yang, Swarun Kumar, Jason Hong, MobiSys  2018 [<a href="papers/wish-mobisys2018.pdf">PAPER</a>] [<a href="wish.html">WEBSITE</a>]<br /></li>
-<li><strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>] [<a href="rfwear.html">WEBSITE</a>]<br /></li>
+<li><strong>Towards Wearable Everyday Body-Frame Tracking </strong>, Haojian Jin, Zhijian Yang, Swarun Kumar, and Jason Hong, UbiComp  2018 <em>(Best Demo Honorable Mention)</em> [<a href="papers/rfwear-ubicomp2018.pdf">PAPER</a>] [<a href="slides/rfwear-ubicomp2018.pdf">SLIDES</a>] [<a href="rfwear.html">WEBSITE</a>]<br /></li>
 </ul>
 
 <strong style="margin-left:0px">Project Participants</h4> </strong><br />
