--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/banner.png" alt="" /></a>
+										<a href="#" class=""><img src="images/banner.png" alt="" /></a>
 
 								</div>
 							</div>
