Swarun: Changed website

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Image -->
-										<a href="#" class=""><img src="images/banner.png" alt="" /></a>
+										<a href="#"><img src="images/banner.png"  style="width:400px; float:right" alt="" /></a>
 
 								</div>
 							</div>
